# aiosalesforce

./: README.md  pyproject.toml  spelling.txt
src/aiosalesforce/: bookmarklet.html  bookmarklet.py  session.py
tests/: test_aiosalesforce.py
