[tool.poetry]
name = "aiosalesforce"
version = "0.1.0"
description = "Asyncio POC for the Salesforce REST API"
authors = ["Jonathan Bowman <git@bowmanjd.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
